2009-09-30  Glenn Morris  <rgm@gnu.org>

	* cedet/ede/proj.el (ede-proj-target-makefile-miscelaneous):
	* cedet/ede/proj-aux.el (ede-aux-source):
	* cedet/ede/proj-misc.el (ede-proj-target-makefile-miscelaneous)
	(ede-misc-source):
	* cedet/semantic/mru-bookmark.el (semantic-mrub-completing-read)
	(semantic-mrub-switch-tags): Fix doc typos.

	* cedet/semantic/db-global.el (data-debug-new-buffer)
	(data-debug-insert-thing): Remove unneeded declarations (one broken).
	(semanticdb-enable-gnu-global-databases): Fix prompt typo.

	* cedet/semantic/analyze/fcn.el (semantic-scope-find): Fix declaration.

	* cedet/semantic/bovine/gcc.el (semantic-gcc-setup): Replace runtime use
	of CL function `remove-if-not'.

	* emacs-lisp/authors.el (authors-ignored-files): Add "js2-mode.el".

	* emacs-lisp/elint.el (elint-init-form): Report declarations where the
	filename is not a string.

2009-09-29  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (safe-local-eval-forms): Fix typo.

2009-09-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-dir-buffers): New var.
	(vc-state-refresh): New function.
	(vc-state): Use it.
	(vc-after-save): Always ask the backend to recompute the new state.
	Always call vc-dir if necessary, using vc-dir-buffers.
	* vc-dir.el (vc-dir-prepare-status-buffer, vc-dir-resynch-file):
	Use vc-dir-buffers.
	(vc-dir-mode): Use vc-dir-buffers rather than after-save-hook.
	(vc-dir-prepare-status-buffer, vc-dir-update)
	(vc-dir-resync-directory-files, vc-dir-resynch-file, vc-dir-mode):
	Don't call expand-file-name on default-directory.

2009-09-29  Juanma Barranquero  <lekktu@gmail.com>

	* speedbar.el (speedbar-item-delete):
	* calc/calc-prog.el (calc-kbd-if):
	* language/hanja-util.el (hanja-init-load): Fix typos in messages.

	* epa.el (epa-key-list-mode-map):
	* hi-lock.el (hi-lock-menu): Fix typos in menus.

	* progmodes/hideshow.el (hs-allow-nesting): Reflow docstring.
	(hs-show-hook): Fix typo in docstring.
